# candor

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
candorkit/: __init__.py  bottleneck.py  certificate.py  data.py  losses.py  metrics.py  model.py  train.py
demo/: quickstart.py
docs/: related-work.md
experiments/: exp_gpt2.py  exp_gpt2_ft.py  exp_gpt2_ft_sweep.py  exp_lm_scratch.py  exp_modadd.py  exp_planted.py  exp_seq.py  run_all.py  tax_curve.py
paper/: _numbers.tex  candor.tex  references.bib
results/: gpt2.json  gpt2_ft.json  gpt2_ft_sweep.json  lm_scratch.json  planted.json  seq.json  tax.json
scripts/: make_figures.py  paper_numbers.py
tests/: test_candor.py
